@@ -6,7 +6,6 @@ import static com.sap.olingo.jpa.processor.core.exception.ODataJPAQueryException
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 import static org.apache.olingo.commons.api.http.HttpStatusCode.INTERNAL_SERVER_ERROR;
 
@@ -17,18 +16,19 @@ import java.util.Set;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import javax.persistence.criteria.Expression;
-import javax.persistence.criteria.From;
-import javax.persistence.criteria.Order;
-import javax.persistence.criteria.Path;
-import javax.persistence.criteria.Selection;
-import javax.persistence.criteria.Subquery;
+
+import jakarta.persistence.criteria.Expression;
+import jakarta.persistence.criteria.Order;
+import jakarta.persistence.criteria.Path;
+import jakarta.persistence.criteria.Selection;
+import jakarta.persistence.criteria.Subquery;
 
 import org.apache.olingo.commons.api.ex.ODataException;
 import org.apache.olingo.commons.api.http.HttpStatusCode;
 import org.apache.olingo.server.api.OData;
 import org.apache.olingo.server.api.ODataApplicationException;
 import org.apache.olingo.server.api.uri.queryoption.expression.ExpressionVisitException;
+import org.apache.olingo.server.api.uri.queryoption.expression.VisitableExpression;
 
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAAssociationPath;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAOnConditionItem;
@@ -37,9 +37,42 @@ import com.sap.olingo.jpa.metadata.core.edm.mapper.exception.ODataJPAModelExcept
 import com.sap.olingo.jpa.processor.cb.ProcessorCriteriaBuilder;
 import com.sap.olingo.jpa.processor.cb.ProcessorSubquery;
 import com.sap.olingo.jpa.processor.core.api.JPAODataRequestContextAccess;
+import com.sap.olingo.jpa.processor.core.api.JPAServiceDebugger.JPARuntimeMeasurement;
 import com.sap.olingo.jpa.processor.core.exception.ODataJPAQueryException;
 import com.sap.olingo.jpa.processor.core.filter.JPAFilterComplier;
 
+/**
+ *
+ * Generates a query containing row_number selections like:
+ *
+ * <pre>
+ * {@code
+ * SELECT
+ *   ...
+ *   row_number() over(
+ *       partition by E1."CodePublisher", E1."ParentCodeID",E1."ParentDivisionCode"
+ *       order by E1."CodePublisher" asc, E1."CodeID" asc, E1."DivisionCode" asc) rowNumber
+ * }
+ * </pre>
+ *
+ * Example requests:
+ * <ul>
+ * <li>{@code
+ * AdministrativeDivisions?$filter=CodeID eq
+ * 'NUTS1'&$top=4&$skip=1&$expand=Children($top=2;$expand=Children($top=1;$skip=1))
+ * }</li>
+ * <li>{@code
+ * Organizations?$top=1&$select=Name1&$expand=SupportEngineers($select=FirstName,LastName;$top=1;$expand=SupportedOrganizations($top=1))
+ * }</li>
+ * </ul>
+ * <p>
+ * To filter on the provided row number a wrapping query is required.
+ * Such a queries are only triggered if <i>odata-jpa-processor-cb</i> is used.
+ * <p>
+ * Integration test: {@link com.sap.olingo.jpa.processor.core.query.TestJPAProcessorExpand}
+ * <p>
+ * @author Oliver Grande
+ */
 final class JPARowNumberFilterQuery extends JPAExpandFilterQuery {
 
   private final JPAFilterComplier filter;
@@ -72,32 +105,28 @@ final class JPARowNumberFilterQuery extends JPAExpandFilterQuery {
     filter.compile();
   }
 
-  @Override
-  public From<?, ?> getRoot() {
-    return queryRoot;
-  }
-
   /**
    *
    */
   @SuppressWarnings("unchecked")
   @Nonnull
   @Override
-  public <T> Subquery<T> getSubQuery(@Nullable final Subquery<?> childQuery) throws ODataApplicationException {
+  public <T> Subquery<T> getSubQuery(@Nullable final Subquery<?> childQuery,
+      @Nullable final VisitableExpression expression, final List<Path<Comparable<?>>> inPath)
+      throws ODataApplicationException {
 
-    final int handle = debugger.startRuntimeMeasurement(this, "createSubQuery");
-    final ProcessorSubquery<T> nextQuery = (ProcessorSubquery<T>) this.subQuery;
-    this.queryRoot = subQuery.from(this.jpaEntity.getTypeClass());
-    this.navigationInfo.setFromClause(queryRoot);
-    buildJoinTable(emptyList(), outerSelections, null);
-    final List<Selection<?>> selections = createSelectForParent();
-    selections.addAll(crateSelectionJoinTable());
-    selections.add(createRowNumber(useInverse));
-    nextQuery.where(createWhereSubQuery(childQuery, useInverse));
-    nextQuery.multiselect(selections);
-    debugger.stopRuntimeMeasurement(handle);
-    return nextQuery;
-
+    try (JPARuntimeMeasurement measurement = debugger.newMeasurement(this, "createSubQuery")) {
+      final ProcessorSubquery<T> nextQuery = (ProcessorSubquery<T>) this.subQuery;
+      this.queryRoot = subQuery.from(this.jpaEntity.getTypeClass());
+      this.navigationInfo.setFromClause(queryRoot);
+      buildJoinTable(emptyList(), outerSelections, null);
+      final List<Selection<?>> selections = createSelectForParent();
+      selections.addAll(crateSelectionJoinTable());
+      selections.add(createRowNumber(useInverse));
+      nextQuery.where(createWhereSubQuery(childQuery, useInverse));
+      nextQuery.multiselect(selections);
+      return nextQuery;
+    }
   }
 
   private List<? extends Selection<?>> crateSelectionJoinTable() throws ODataJPAQueryException {
@@ -109,7 +138,7 @@ final class JPARowNumberFilterQuery extends JPAExpandFilterQuery {
         return columns
             .stream()
             .map(key -> mapOnToSelection(key.getRightPath(), queryJoinTable, null))
-            .collect(toList());
+            .toList();
       } catch (final ODataJPAModelException e) {
         if (e.getId().equals(NO_JOIN_TABLE_TYPE.getKey())) {
           throw new ODataJPAQueryException(QUERY_PREPARATION_JOIN_TABLE_TYPE_MISSING, INTERNAL_SERVER_ERROR,
@@ -123,24 +152,24 @@ final class JPARowNumberFilterQuery extends JPAExpandFilterQuery {
 
   private List<Selection<?>> createSelectForParent() {
 
-    final int handle = debugger.startRuntimeMeasurement(this, "createSelectClause");
-    final List<Selection<?>> selections = new ArrayList<>();
-
-    // Build select clause
-    for (final JPAPath jpaPath : this.outerSelections) {
-      if (jpaPath.isPartOfGroups(groups)) {
-        final Path<?> p = ExpressionUtil.convertToCriteriaPath(joinTables, queryRoot, jpaPath.getPath());
-        p.alias(jpaPath.getAlias());
-        selections.add(p);
+    try (JPARuntimeMeasurement measurement = debugger.newMeasurement(this, "createSelectClause")) {
+      final List<Selection<?>> selections = new ArrayList<>();
+      // Build select clause
+      for (final JPAPath jpaPath : this.outerSelections) {
+        if (jpaPath.isPartOfGroups(groups)) {
+          final Path<?> path = ExpressionUtility.convertToCriteriaPath(joinTables, queryRoot, jpaPath.getPath());
+          path.alias(jpaPath.getAlias());
+          selections.add(path);
+        }
       }
+      return selections;
     }
-    debugger.stopRuntimeMeasurement(handle);
-    return selections;
   }
 
   private Expression<Long> createRowNumber(final boolean inverse) throws ODataApplicationException {
     try {
-      final List<Path<?>> pathList = createWhereKeyInPathList(
+      @SuppressWarnings("unchecked")
+      final List<Path<Comparable<?>>> pathList = (List<Path<Comparable<?>>>) createWhereKeyInPathList(
           inverse ? association : childAssociation
               .orElseThrow(() -> new ODataJPAQueryException(QUERY_PREPARATION_ERROR, INTERNAL_SERVER_ERROR)),
           queryJoinTable == null ? queryRoot : queryJoinTable);
